# enum-utils

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.autosave  LICENSE  README.md  enum.h  test.cpp
